# shyaml-rs

./: .gitchangelog.rc  .gitignore  Cargo.toml  LICENSE  README.org  autogen.sh  build.rs  musl-build  musl-static-build
.package.d/: config
.package.d/autogen.d/: 20-org-to-md.sh
.package.d/release/post-publish.d/: github-release
src/: main.rs  tag.rs  yaml.rs
src/cli/: def.rs  log.rs  mod.rs  output.rs  plan.rs
src/yaml/: doc_mutation.rs  error.rs  merge.rs  mod.rs  mutation.rs  path.rs  query.rs  serialize.rs
tests/: apply.rs  compound.rs  del.rs  emit.rs  merge_tags.rs  set_value.rs
tests/common/: mod.rs
