[package]
name = "shyaml-rs"
version = "%%version%%"
edition = "2021"
authors = ["Valentin Lab <valentin.lab@kalysto.org>"]
description = "Command-line YAML processor - get values, set values, and transform YAML documents"
license = "MIT"
repository = "https://github.com/0k/shyaml-rs"
readme = "README.md"
keywords = ["yaml", "cli", "parser", "query", "transform"]
categories = ["command-line-utilities", "parsing"]
exclude = ["README.org", ".package.d/", "autogen.sh", "bin/", "musl-static-build"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
fern = "0.6.2"
libc = "0.2.152"
fyaml-sys = "0.1"
log = "0.4.20"
regex = "1.10.3"
time = { version = "0.3.37", features = ["std", "local-offset", "macros", "formatting" ] }
fyaml = "0.1"

[dev-dependencies]
indoc = "2"
similar = "2"
tempfile = "3"

[[test]]
name = "apply"
path = "tests/apply.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
